// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repo/Summary/List Default smoke-test 1`] = `
<div class="min-width">
  <div class="prose mb-3">
    <h3>
      Featured Repositories
    </h3>
  </div>
  <div class>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <a class="link-primary break-words"
         href="/repo/"
      >
        Short Name
      </a>
      <p class="text-sm text-muted break-words">
        short description
      </p>
    </div>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <a class="link-primary break-words"
         href="/repo/"
      >
        Long Name that goes on and on and on and on a...
      </a>
      <p class="text-sm text-muted break-words">
        Lorem ipsum dolor sit amet, consectetur adipi...
      </p>
    </div>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <a class="link-primary break-words"
         href="/repo/"
      >
        LongNameLongNameLongNameLongNameLongNameLongN...
      </a>
      <p class="text-sm text-muted break-words">
        LoremipsumLoremipsumLoremipsumLoremipsumLorem...
      </p>
    </div>
  </div>
</div>
`;

exports[`Repo/Summary/List Empty smoke-test 1`] = `
<div class="min-width">
  <div class="prose mb-3">
    <h3>
      Latest
    </h3>
  </div>
  <p class="prose">
    None
  </p>
</div>
`;

exports[`Repo/Summary/List Loading smoke-test 1`] = `
<div class="min-width">
  <div class="prose mb-3">
    <h3>
      Latest
    </h3>
  </div>
  <div class>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <div class="h-5 mb-2 skeleton w-40">
      </div>
      <div class="h-4 skeleton w-100">
      </div>
    </div>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <div class="h-5 mb-2 skeleton w-40">
      </div>
      <div class="h-4 skeleton w-100">
      </div>
    </div>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <div class="h-5 mb-2 skeleton w-40">
      </div>
      <div class="h-4 skeleton w-100">
      </div>
    </div>
  </div>
</div>
`;

exports[`Repo/Summary/List No Title smoke-test 1`] = `
<div class="min-width">
  <div class>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <a class="link-primary break-words"
         href="/repo/"
      >
        Short Name
      </a>
      <p class="text-sm text-muted break-words">
        short description
      </p>
    </div>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <a class="link-primary break-words"
         href="/repo/"
      >
        Long Name that goes on and on and on and on a...
      </a>
      <p class="text-sm text-muted break-words">
        Lorem ipsum dolor sit amet, consectetur adipi...
      </p>
    </div>
  </div>
</div>
`;

exports[`Repo/Summary/List Partially Loaded smoke-test 1`] = `
<div class="min-width">
  <div class="prose mb-3">
    <h3>
      Latest
    </h3>
  </div>
  <div class>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <a class="link-primary break-words"
         href="/repo/"
      >
        Short Name
      </a>
      <p class="text-sm text-muted break-words">
        short description
      </p>
    </div>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <a class="link-primary break-words"
         href="/repo/"
      >
        Long Name that goes on and on and on and on a...
      </a>
      <p class="text-sm text-muted break-words">
        Lorem ipsum dolor sit amet, consectetur adipi...
      </p>
    </div>
    <div class="p-4 bg-base-200 my-2 rounded-lg">
      <div class="h-5 mb-2 skeleton w-40">
      </div>
      <div class="h-4 skeleton w-100">
      </div>
    </div>
  </div>
</div>
`;
